--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/SBTheme.Base" >
+        android:theme="@style/ActionBarTheme" >
         <activity
             android:name=".StoryBuilderMain"
             android:label="@string/app_name" >
