--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile ("com.android.support:support-v4:22.2.0")
-    compile ("com.android.support:appcompat-v7:22.2.0")
-    compile ("com.android.support:support-annotations:22.2.0")
-    compile ("com.android.support:recyclerview-v7:22.2.0")
-    compile ("com.android.support:design:22.2.0")
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-annotations:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
 }
