--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tahastudio.storybuilder.CreateStory" />
         </activity>
+        <activity
+            android:name=".SQLdatabase"
+            android:label="@string/title_activity_sqldatabase"></activity>
     </application>
 
 </manifest>
