--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tahastudio.storybuilder">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/ActionBarTheme">
+        android:theme="@style/ActionBarTheme"
+        android:largeHeap="true">
         <activity
             android:name=".StoryBuilderMain"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -26,17 +24,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tahastudio.storybuilder.StoryBuilderMain" />
         </activity>
-        <activity
-            android:name=".TabViewer"
-            android:label="@string/title_activity_tab_viewer"
-            android:parentActivityName=".CreateStory">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="tahastudio.storybuilder.CreateStory" />
-        </activity>
-        <activity
-            android:name=".SQLdatabase"
-            android:label="@string/title_activity_sqldatabase"></activity>
     </application>
 
 </manifest>
