--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:design:23.0.0'
     compile 'com.android.support:percent:23.0.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
