--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/ActionBarTheme"
+        android:theme="@style/StoryBuilderTheme"
         android:largeHeap="true">
         <activity
             android:name=".StoryBuilderMain"
