Add splash screen & about page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,25 @@
         android:label="@string/app_name"
         android:theme="@style/StoryBuilderTheme"
         android:largeHeap="true">
+
         <activity
-            android:name=".StoryBuilderMain"
+            android:name=".ui.SplashScreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".StoryBuilderMain"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAINACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ShowStory"
             android:label="@string/title_activity_create_story"
