--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
                 android:resource="@xml/searchable" />
         </activity>
 
+        <!-- Try to move into a fragment -->
         <activity
             android:name=".About"
             android:label="@string/about_activity"
@@ -50,6 +51,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tahastudio.storybuilder.StoryBuilderMain" />
         </activity>
+
+        <activity
+            android:name=".Search"
+            android:label="Search"
+            android:parentActivityName=".StoryBuilderMain">
+            <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
