--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:theme="@style/StoryBuilderTheme"
         android:largeHeap="true">
         <provider
-            android:authorities="tahastudio.storybuilder.db.SQLDatabase"
+            android:authorities="tahastudio.storybuilder.db.StoryProvider"
             android:name="tahastudio.storybuilder.db.StoryProvider" />
+
         <activity
             android:name=".ui.SplashScreen"
             android:label="@string/app_name">
@@ -21,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".StoryBuilderMain"
             android:label="@string/app_name">
@@ -30,17 +30,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ShowStory"
             android:label="@string/title_activity_create_story"
-            android:windowSoftInputMode="stateHidden|adjustPan"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tahastudio.storybuilder.StoryBuilderMain" />
         </activity>
-
         <!-- TODO -> Try to move into a fragment -->
         <activity
             android:name=".About"
