--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StoryBuilderMain"
+            android:name=".activities.StoryBuilderMain"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAINACTIVITY" />
@@ -29,22 +29,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShowStory"
+            android:name=".activities.ShowStory"
             android:label="@string/title_activity_create_story"
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="tahastudio.storybuilder.StoryBuilderMain" />
+                android:value=".activities.StoryBuilderMain" />
         </activity>
         <!-- TODO -> Try to move into a fragment -->
         <activity
-            android:name=".About"
+            android:name=".activities.About"
             android:label="@string/about_activity"
-            android:parentActivityName=".StoryBuilderMain">
+            android:parentActivityName=".activities.StoryBuilderMain">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="tahastudio.storybuilder.StoryBuilderMain" />
+                android:value=".activities.StoryBuilderMain" />
         </activity>
 
     </application>
