Implement RecyclerView/CardView across all activities/fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ShowStory"
+            android:name=".activities.Story"
             android:label="@string/title_activity_create_story"
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:launchMode="singleTop">
